--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Facture.mu – Landing</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -333,13 +334,13 @@
       padding: 28px 0 40px;
     }
 
-.hero{
-  background: var(--hero);
-  border-radius: 32px;
-  padding: 64px 70px 0; /* 👈 quitamos padding inferior */
-  position: relative;
-  overflow: visible;
-}
+    .hero{
+      background: var(--hero);
+      border-radius: 32px;
+      padding: 64px 70px 0;
+      position: relative;
+      overflow: visible;
+    }
 
 
     .hero h1{
@@ -369,13 +370,6 @@
       gap: 22px;
     }
 
-    .cta-row{
-      width:100%;
-      display:flex;
-      align-items:center;
-      justify-content:flex-start;
-    }
-
     .cta{
       background: var(--green);
       color:#fff;
@@ -390,16 +384,6 @@
     }
     .cta:hover{background: rgba(27,118,77,.7)}
     .cta:active{transform:translateY(1px)}
-
-   .mockup-area{
-  position: absolute;
-  left: 50%;
-  bottom: -90px; /* 👈 rompe el hero solo un poco */
-  transform: translateX(-50%);
-  width: min(860px, 100%);
-  display: flex;
-  justify-content: center;
-}
 
     /* “sombra” del mockup */
     .mockup-shadow{
@@ -448,32 +432,6 @@
       color:#2f4a6c;
     }
 
-      /* Logo MRA a la derecha */
-    .mra2{
-      position:absolute;
-      left: 70px;
-      bottom: 80px;
-      display:flex;
-      align-items:center;
-      gap:10px;
-      color:#0c1e36;
-      opacity:.95;
-    }
-    .mra2 .mra-big2{
-      font-weight:900;
-      font-size:42px;
-      letter-spacing:-0.04em;
-      color:#0b2b55;
-    }
-    .mra2 .mra-txt2{
-      font-size:10px;
-      letter-spacing:.12em;
-      font-weight:700;
-      text-transform:uppercase;
-      line-height:1.2;
-      color:#2f4a6c;
-    }
-
     /* Below hero section */
     .below{
       padding: 50px 0 70px;
@@ -503,7 +461,22 @@
       font-size:14px;
       min-width: 190px;
       text-decoration: none;
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: transform .18s ease, box-shadow .18s ease;
+      border-color: #e5e7eb;
+      box-shadow: 0 6px 14px rgba(0,0,0,.06);
+    }
+
+    .pill:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 18px rgba(0,0,0,.08);
+    }
+
+    .pill:active{
+      transform: translateY(0);
     }
 
     .rating{
@@ -1087,9 +1060,9 @@
 ================================ */
 
 .hero--tall{
-  min-height: 550px;        /* un poco más alto */
+  min-height: 580px;
   padding-top: 80px;
-  padding-bottom: 240px;   /* 👈 espacio REAL reservado al mockup */
+  padding-bottom: 320px;
 }
 
 /* TEXTO + CTA SIEMPRE ARRIBA */
@@ -1109,33 +1082,96 @@
   margin-bottom: 36px;
 }
 
-/* CTA alineado a la izquierda (desktop) */
-/* CTA alineado a la altura del logo MRA */
-.cta-row{
-  position: absolute;
-    left: -30px;
-    bottom: -280px;
-}
-
-
 /* MOCKUP SIEMPRE DEBAJO DEL TEXTO */
 .hero-mockup-wrapper{
   position: absolute;
   left: 50%;
   bottom: -70px;           /* sobresale SOLO por abajo */
   transform: translateX(-50%);
-  width: min(500px, 92%);
+  width: min(600px, 96%);
   z-index: 1;              /* 👈 debajo del contenido */
-  pointer-events: none;   /* 👈 nunca tapa el botón */
+  pointer-events: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.hero .mockup{
+  width: 115%;
+  max-width: 874px;
+  height: auto;
+  border-radius: 14px;
+}
+
+.hero-cta-floating{
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 30px);
   display: flex;
   justify-content: center;
 }
 
-.hero .mockup{
+.hero-cta-floating .cta{
+  min-width: 240px;
+}
+
+.pill-demo{
+  background: #ffffff;
+  border-color: #e5e7eb;
+}
+
+.demo-modal{
+  position: fixed;
+  inset: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background: rgba(12, 18, 32, .64);
+  padding: 20px;
+  z-index: 70;
+}
+
+.demo-modal.is-open{display: flex;}
+
+.demo-modal__dialog{
+  background: #fff;
+  border-radius: 18px;
+  box-shadow: 0 24px 60px rgba(0,0,0,.24);
+  width: min(920px, 100%);
+  position: relative;
+  padding: 18px;
+}
+
+.demo-modal__close{
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  border: 0;
+  background: #0b1220;
+  color: #fff;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.demo-modal__body{
+  padding-top: 56.25%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  background: #0b1220;
+}
+
+.demo-modal__body iframe{
+  position: absolute;
+  inset: 0;
   width: 100%;
-  max-width: 760px;
-  height: auto;
-  border-radius: 14px;
+  height: 100%;
+  border: 0;
 }
 
 /* sombra suave */
@@ -1156,16 +1192,16 @@
 
 @media (max-width: 980px){
   .hero--tall{
-    padding-bottom: 200px;
+    padding-bottom: 240px;
   }
 
-  .cta-row{
-    position: relative;
-    left: auto;
-    bottom: auto;
-    margin-top: 32px;
-    display: flex;
-    justify-content: center;
+  .hero-mockup-wrapper{
+    width: min(520px, 94%);
+  }
+
+  .hero .mockup{
+    width: 108%;
+    max-width: 820px;
   }
 
   .mra{
@@ -1192,10 +1228,20 @@
     transform: none;
     left: auto;
     pointer-events: auto;
+    width: 100%;
   }
 
   .hero .mockup{
     max-width: 100%;
+    width: 100%;
+  }
+
+  .hero-cta-floating{
+    position: relative;
+    transform: none;
+    top: auto;
+    left: auto;
+    margin-top: 30px;
   }
 
   .mockup-shadow{
@@ -1281,19 +1327,20 @@
 
     <!-- MOCKUP FLOTA -->
     <div class="hero-mockup-wrapper">
-      <div class="" aria-hidden="true"></div>
+      <div class="mockup-shadow" aria-hidden="true"></div>
       <img class="mockup" src="screens.png" alt="Interface Facture.mu">
+
+      <div class="hero-cta-floating">
+        <button class="cta" type="button" data-register-cta>
+          Essai 15j gratuits
+        </button>
+      </div>
     </div>
 
     <!-- LOGO MRA -->
     <div class="mra">
       <img src="Imagen 85.png" alt="Mauritius Revenue Authority" style="height:64px;">
     </div>
-    <div class="mra2">
-  <button class="cta" onclick="window.open('https://facture.mu/register', '_blank', 'noopener,noreferrer')">
-    Essai 15j gratuits
-  </button>
-</div>
   </section>
 </div>
 
@@ -1303,7 +1350,7 @@
       <p class="title">Conçu pour les entreprises qui opèrent à Maurice et au-delà</p>
 
       <div class="pill-row">
-        <div class="pill">Voir la Demo</div>
+        <button class="pill pill-demo" type="button">Voir la Demo</button>
 
         <div class="rating">
 <div class="stars">
@@ -1437,7 +1484,7 @@
           de paiement.
         </p>
 
-        <button class="activity-cta">
+        <button class="activity-cta" type="button" data-register-cta>
           Essai 15j gratuits
         </button>
       </div>
@@ -1541,7 +1588,7 @@
       <h2>Commencez à facturer dès aujourd’hui&nbsp;!</h2>
       <p>Facturez vos clients, soyez payé rapidement&nbsp;!</p>
 
-      <button class="final-cta-btn">
+      <button class="final-cta-btn" type="button" data-register-cta>
         Essai 15j gratuits
       </button>
 
@@ -1628,31 +1675,109 @@
   </div>
 </section>
 
-
 </main>
-<script>
-  const items = document.querySelectorAll('.func-item');
-  const image = document.getElementById('func-image');
 
-  items.forEach(item => {
-    item.addEventListener('click', () => {
-      items.forEach(i => i.classList.remove('active'));
-      item.classList.add('active');
-      image.src = item.dataset.image;
+<div class="demo-modal" id="demo-modal" aria-hidden="true">
+  <div class="demo-modal__dialog" role="dialog" aria-modal="true" aria-label="Voir la démonstration vidéo">
+    <button class="demo-modal__close" type="button" aria-label="Fermer la vidéo">×</button>
+    <div class="demo-modal__body">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Dc-_L0mkiUE?si=2q2oP52ABmIcX-ZG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const items = document.querySelectorAll('.func-item');
+    const image = document.getElementById('func-image');
+
+    items.forEach(item => {
+      item.addEventListener('click', () => {
+        items.forEach(i => i.classList.remove('active'));
+        item.classList.add('active');
+        image.src = item.dataset.image;
+      });
+    });
+
+    const menuToggle = document.querySelector('.menu-toggle');
+    const header = document.querySelector('header');
+
+    menuToggle?.addEventListener('click', () => {
+      const isOpen = header.classList.toggle('open');
+      menuToggle.classList.toggle('is-active', isOpen);
+      menuToggle.setAttribute('aria-expanded', String(isOpen));
+    });
+
+    const registerButtons = document.querySelectorAll('[data-register-cta]');
+    registerButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        window.open('https://facture.mu/register', '_blank', 'noopener,noreferrer');
+      });
+    });
+
+    const featureLinks = document.querySelectorAll('a[href="#fonctionnalites"]');
+    const featuresSection = document.getElementById('fonctionnalites');
+
+    const acceleratedScrollTo = (target, duration = 450) => {
+      if (!target) return;
+      const start = window.scrollY;
+      const end = target.getBoundingClientRect().top + window.scrollY;
+      const change = end - start;
+      const startTime = performance.now();
+
+      const easeInQuad = t => t * t;
+
+      const step = now => {
+        const elapsed = now - startTime;
+        const progress = Math.min(elapsed / duration, 1);
+        const eased = easeInQuad(progress);
+        window.scrollTo(0, start + change * eased);
+        if (progress < 1) requestAnimationFrame(step);
+      };
+
+      requestAnimationFrame(step);
+    };
+
+    featureLinks.forEach(link => {
+      link.addEventListener('click', event => {
+        event.preventDefault();
+        acceleratedScrollTo(featuresSection);
+      });
+    });
+
+    const demoTrigger = document.querySelector('.pill-demo');
+    const demoModal = document.getElementById('demo-modal');
+    const demoClose = document.querySelector('.demo-modal__close');
+    const demoFrame = demoModal?.querySelector('iframe');
+    const demoSrc = demoFrame?.src;
+
+    const closeDemo = () => {
+      if (!demoModal) return;
+      demoModal.classList.remove('is-open');
+      demoModal.setAttribute('aria-hidden', 'true');
+      document.body.style.overflow = '';
+      if (demoFrame && demoSrc) {
+        demoFrame.src = demoSrc;
+      }
+    };
+
+    const openDemo = () => {
+      if (!demoModal) return;
+      demoModal.classList.add('is-open');
+      demoModal.setAttribute('aria-hidden', 'false');
+      document.body.style.overflow = 'hidden';
+      demoClose?.focus();
+    };
+
+    demoTrigger?.addEventListener('click', openDemo);
+    demoClose?.addEventListener('click', closeDemo);
+    demoModal?.addEventListener('click', event => {
+      if (event.target === demoModal) {
+        closeDemo();
+      }
     });
   });
-
-  const menuToggle = document.querySelector('.menu-toggle');
-  const header = document.querySelector('header');
-
-  menuToggle?.addEventListener('click', () => {
-    const isOpen = header.classList.toggle('open');
-    menuToggle.classList.toggle('is-active', isOpen);
-    menuToggle.setAttribute('aria-expanded', String(isOpen));
-  });
 </script>
-
-</body>
 
 <footer class="site-footer">
   <div class="container footer-grid">
@@ -1699,5 +1824,6 @@
 </footer>
 
 
+</body>
 </html>
 
